--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
 			<h3><%= p.title %></h3>
 			<h4><%= p.author %> | <small><%= p.updated_at %></small></h4>
 			<p><%= p.body %></p>
+			<%= link_to 'Read more', post_path(p) %>
 		</div>
 	<% end %>
 </div>
