--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
 	<h1 class="headline"><a href="/">Demosthenes x  Locke</a></h1>
 		<ul class="header-subnav">
 			<li><%= link_to 'Home', '/' %></li>
-			<li><%= link_to 'Blog', 'posts' %></li>
 			<li><%= link_to 'Authors', "#" %></li>
-			<li><%= link_to 'Dashboard', 'admin' %></li>
+			<li><%= link_to 'Dashboard', '/admin' %></li>
 		<ul>
 	</header>
 	<%= yield %>
