--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,6 +1,7 @@
-<%= content_for(:title, "Blog") %>
+<%= content_for(:title, @author.name) %>
 <div class="row medium-8 large-7 columns">
-	<% @posts.each do |p| %>
+	<%= render @author %>
+	<% @author.posts.each do |p| %>
 		<div class="blog-post">
 			<%= render p %>
 			<%= link_to 'Read more', post_path(p) %>
