--- a/app/assets/stylesheets/authors.scss
+++ b/app/assets/stylesheets/authors.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the authors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#authors, #author {
+	.row {
+		margin-top: 20px;
+	}
+} 
