--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,5 +1,5 @@
 <%= content_for(:title, "Authors") %>
-<div class="row medium-8 large-7 columns">
+<div class="medium-6 large-8 columns" id="authors">
 	<% @authors.each do |a| %>
 		<%= render a %>
 	<% end %>
