--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,10 +1,9 @@
 <%= content_for(:title, @author.name) %>
-<div class="row medium-8 large-7 columns">
+<div class="medium-8 large-7 columns" id="author">
 	<%= render @author %>
 	<% @author.posts.each do |p| %>
 		<div class="blog-post">
 			<%= render p %>
-			<%= link_to 'Read more', post_path(p) %>
 		</div>
 	<% end %>
 </div>
