--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,6 @@
 <h3><%= post.title %></h3>
 <h4><%= link_to post.author_name, author_path(post.author) %> | <small><%= post.updated_at %></small></h4>
 <p><%= post.body %></p>
+<% if @show_post_link %>
+	<small><%= link_to 'Read more', post_path(post) %></small>
+<% end %>
